Finish main area

--- a/index.html
+++ b/index.html
@@ -39,7 +39,67 @@
       </div>
     </header>
     <main>
-      <h1>My work</h1>
+      <h1 class="header-text">My work</h1>
+      <div class="card">
+        <div class="image-placeholder"></div>
+        <div class="card-body">
+          <div class="card-header">
+            <h2 class="header-text">Project Name</h2>
+            <div class="icons">
+              <a href="https://github.com"><img src="assets/github.svg" /></a>
+              <a href="#"><img src="assets/link.svg" /></a>
+            </div>
+          </div>
+          <p class="main-text">
+            Short description of the project. Just a couple sentences will do.
+          </p>
+        </div>
+      </div>
+      <div class="card">
+        <div class="image-placeholder"></div>
+        <div class="card-body">
+          <div class="card-header">
+            <h2 class="header-text">Project Name</h2>
+            <div class="icons">
+              <a href="https://github.com"><img src="assets/github.svg" /></a>
+              <a href="#"><img src="assets/link.svg" /></a>
+            </div>
+          </div>
+          <p class="main-text">
+            Short description of the project. Just a couple sentences will do.
+          </p>
+        </div>
+      </div>
+      <div class="card">
+        <div class="image-placeholder"></div>
+        <div class="card-body">
+          <div class="card-header">
+            <h2 class="header-text">Project Name</h2>
+            <div class="icons">
+              <a href="https://github.com"><img src="assets/github.svg" /></a>
+              <a href="#"><img src="assets/link.svg" /></a>
+            </div>
+          </div>
+          <p class="main-text">
+            Short description of the project. Just a couple sentences will do.
+          </p>
+        </div>
+      </div>
+      <div class="card">
+        <div class="image-placeholder"></div>
+        <div class="card-body">
+          <div class="card-header">
+            <h2 class="header-text">Project Name</h2>
+            <div class="icons">
+              <a href="https://github.com"><img src="assets/github.svg" /></a>
+              <a href="#"><img src="assets/link.svg" /></a>
+            </div>
+          </div>
+          <p class="main-text">
+            Short description of the project. Just a couple sentences will do.
+          </p>
+        </div>
+      </div>
     </main>
     <footer></footer>
   </body>
