--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="gradient-div"></div>
     <header>
       <div class="image-wrapper">
         <img
