Adjust footer and main styling for tablet display

--- a/index.html
+++ b/index.html
@@ -41,64 +41,96 @@
     </header>
     <main>
       <h1 class="header-text">My work</h1>
-      <div class="card">
-        <div class="image-placeholder"></div>
-        <div class="card-body">
-          <div class="card-header">
-            <h2 class="header-text">Project Name</h2>
-            <div class="icons">
-              <a href="https://github.com"><img src="assets/github.svg" /></a>
-              <a href="#"><img src="assets/link.svg" /></a>
+      <div class="card-wrapper">
+        <div class="card">
+          <div class="image-placeholder"></div>
+          <div class="card-body">
+            <div class="card-header">
+              <h2 class="header-text">Project Name</h2>
+              <div class="icons">
+                <a href="https://github.com"><img src="assets/github.svg" /></a>
+                <a href="#"><img src="assets/link.svg" /></a>
+              </div>
             </div>
+            <p class="main-text">
+              Short description of the project. Just a couple sentences will do.
+            </p>
           </div>
-          <p class="main-text">
-            Short description of the project. Just a couple sentences will do.
-          </p>
         </div>
-      </div>
-      <div class="card">
-        <div class="image-placeholder"></div>
-        <div class="card-body">
-          <div class="card-header">
-            <h2 class="header-text">Project Name</h2>
-            <div class="icons">
-              <a href="https://github.com"><img src="assets/github.svg" /></a>
-              <a href="#"><img src="assets/link.svg" /></a>
+        <div class="card">
+          <div class="image-placeholder"></div>
+          <div class="card-body">
+            <div class="card-header">
+              <h2 class="header-text">Project Name</h2>
+              <div class="icons">
+                <a href="https://github.com"><img src="assets/github.svg" /></a>
+                <a href="#"><img src="assets/link.svg" /></a>
+              </div>
             </div>
+            <p class="main-text">
+              Short description of the project. Just a couple sentences will do.
+            </p>
           </div>
-          <p class="main-text">
-            Short description of the project. Just a couple sentences will do.
-          </p>
         </div>
-      </div>
-      <div class="card">
-        <div class="image-placeholder"></div>
-        <div class="card-body">
-          <div class="card-header">
-            <h2 class="header-text">Project Name</h2>
-            <div class="icons">
-              <a href="https://github.com"><img src="assets/github.svg" /></a>
-              <a href="#"><img src="assets/link.svg" /></a>
+        <div class="card">
+          <div class="image-placeholder"></div>
+          <div class="card-body">
+            <div class="card-header">
+              <h2 class="header-text">Project Name</h2>
+              <div class="icons">
+                <a href="https://github.com"><img src="assets/github.svg" /></a>
+                <a href="#"><img src="assets/link.svg" /></a>
+              </div>
             </div>
+            <p class="main-text">
+              Short description of the project. Just a couple sentences will do.
+            </p>
           </div>
-          <p class="main-text">
-            Short description of the project. Just a couple sentences will do.
-          </p>
         </div>
-      </div>
-      <div class="card">
-        <div class="image-placeholder"></div>
-        <div class="card-body">
-          <div class="card-header">
-            <h2 class="header-text">Project Name</h2>
-            <div class="icons">
-              <a href="https://github.com"><img src="assets/github.svg" /></a>
-              <a href="#"><img src="assets/link.svg" /></a>
+        <div class="card">
+          <div class="image-placeholder"></div>
+          <div class="card-body">
+            <div class="card-header">
+              <h2 class="header-text">Project Name</h2>
+              <div class="icons">
+                <a href="https://github.com"><img src="assets/github.svg" /></a>
+                <a href="#"><img src="assets/link.svg" /></a>
+              </div>
             </div>
+            <p class="main-text">
+              Short description of the project. Just a couple sentences will do.
+            </p>
           </div>
-          <p class="main-text">
-            Short description of the project. Just a couple sentences will do.
-          </p>
+        </div>
+        <div class="card">
+          <div class="image-placeholder"></div>
+          <div class="card-body">
+            <div class="card-header">
+              <h2 class="header-text">Project Name</h2>
+              <div class="icons">
+                <a href="https://github.com"><img src="assets/github.svg" /></a>
+                <a href="#"><img src="assets/link.svg" /></a>
+              </div>
+            </div>
+            <p class="main-text">
+              Short description of the project. Just a couple sentences will do.
+            </p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="image-placeholder"></div>
+          <div class="card-body">
+            <div class="card-header">
+              <h2 class="header-text">Project Name</h2>
+              <div class="icons">
+                <a href="https://github.com"><img src="assets/github.svg" /></a>
+                <a href="#"><img src="assets/link.svg" /></a>
+              </div>
+            </div>
+            <p class="main-text">
+              Short description of the project. Just a couple sentences will do.
+            </p>
+          </div>
         </div>
       </div>
     </main>
@@ -132,7 +164,7 @@
           </a>
         </div>
       </div>
-      <img src="assets/andrea2.jpg" alt="Andrea smiling" />
+      <div class="footer-image"><img  src="assets/andrea2.jpg" alt="Andrea smiling" /></div>
     </footer>
   </body>
 </html>
