Adjust header for tablet displays

--- a/index.html
+++ b/index.html
@@ -9,23 +9,29 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="gradient-div"></div>
     <header>
-      <div class="image-wrapper">
-        <img
-          class="header-picture"
-          src="assets/andrea.jpg"
-          alt="Andrea smiling"
-        />
-        <p class="header-text full-name">Andrea Rodriguez</p>
+      <div class="gradient-div"></div>
+      <div class="header-body">
+        <div class="image-wrapper">
+          <img
+            class="header-picture"
+            src="assets/andrea.jpg"
+            alt="Andrea smiling"
+          />
+          <p class="header-text full-name">Andrea Rodriguez</p>
+        </div>
+        <h1 class="header-text">About Me</h1>
+        <p class="main-text about-me">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi
+          accusantium quia amet corrupti quis doloremque iste unde explicabo! Quia
+          minus totam recusandae illo fugiat iure, deleniti officia ratione vitae
+          magnam!
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi
+          accusantium quia amet corrupti quis doloremque iste unde explicabo! Quia
+          minus totam recusandae illo fugiat iure, deleniti officia ratione vitae
+          magnam!
+        </p>
       </div>
-      <h1 class="header-text">About Me</h1>
-      <p class="main-text about-me">
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi
-        accusantium quia amet corrupti quis doloremque iste unde explicabo! Quia
-        minus totam recusandae illo fugiat iure, deleniti officia ratione vitae
-        magnam!
-      </p>
       <div class="icons">
         <a href="https://github.com"><img src="assets/github.svg" /></a>
         <a href="https://linkedin.com"><img src="assets/linkedin.svg" /></a>
